<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_utils</name>
  <version>0.0.1</version>
  <description>Utility nodes for UGV Rover (battery monitor, OLED display, etc)</description>
  <maintainer email="dwilliestyle@gmail.com">Don</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>twist_mux_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Python dependencies that need to be installed via apt/pip -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-smbus</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>